--- a/style_inicio.css
+++ b/style_inicio.css
@@ -38,6 +38,8 @@ body {
         height: 200px;
         margin-left: 30px;
         margin-right: 30px;
+        padding-top: 30px;
+
         .cta-header {
             color:#ffffff;
             background-color:#FD625D;
@@ -117,6 +119,18 @@ body {
         .contact-form-block{
             background-color:#eeeeee; 
             height: 200px;
+            padding: 50px;
+            align-items: center;
         }
+    }
+    footer{
+        background-color:#000000; 
+        color:#ffffff;
+        display:flex;
+        flex-direction: row;
+        height: 50px;
+        padding-top: 10px;
+
+
     }
 }
