--- a/style_inicio.css
+++ b/style_inicio.css
@@ -26,36 +26,64 @@ body {
         }
         menu{
             font-weight: 800;
-            font-size: large;
+            font-size: 70%;
             margin-left: 200px;
             row-gap: 20px;
             padding-top: 10px;
+            color:#000000;
             }
     }
     main {
         .header{
         background-color:#ffffff; 
-        height: 200px;
-        margin-left: 30px;
-        margin-right: 30px;
-        padding-top: 30px;
+        height: 350px;
+        display:flex;
+        flex-direction:row;
+        margin-bottom: 50px;
 
-        .cta-header {
-            color:#ffffff;
-            background-color:#FD625D;
-            border-color: #652cb3;
-            border-radius: 12px;
-            padding:10px;
-            font-size: large;
-
+        .banner{
+            img {
+                width: 800px;
+                height: 400px;
+            }
+            margin-left: 50%;
+            -bottom: 10%;
+            position: absolute;
+        }
+        .texto-banner{
+            margin-left: 30px;
+            margin-right: 50%;
+            padding-top: 30px;
+            font-size: 250%;
         }
         }
+            .cta-header {
+                color:#ffffff;
+                background-color:#FD625D;
+                border-color: #652cb3;
+                border-radius: 12px;
+                padding:10px;
+                font-size: 80%;
+                margin-bottom: 10%;
+                margin-top: 2%;
+    
+            }
+        }
+        .h2 {
+            margin-left: 30px;
+            marging-top: 20%;
+            margin-bottom: 1%;
+            font-size: 200%;
+        }
+
         .choose-instrument-block{
             display:flex;
             flex-direction:row;
             margin-left: 40px;
             margin-right: 40px;
-            margin-bottom: 20px;
+            margin-bottom: 1%;
+            padding-bottom: 5%;  
+            padding-top: 1%;
             gap:30px;
             justify-content: space-between;
         .piano-class-btn{
@@ -63,18 +91,18 @@ body {
             flex-direction: column;
             justify-items: left;
             box-sizing: content-box; 
-            width: 400px;
-            height: 200px;
+            width: 500px;
+            height: 300px;
             background-color:#5762ef;
             color:#ffffff;
             justify-content: center;
             align-items: center;
             border-radius: 12px;
             box-shadow: 10px 10px #8223ff; 
-            font-size: 20px;
+            font-size: 30px;
             img {
-                width: 100px;
-                height: 100px;
+                width: 180px;
+                height: 180px;
             }
 
         }
@@ -82,55 +110,73 @@ body {
             display:flex;
             flex-direction: column;
             box-sizing: content-box; 
-            width: 400px;
-            height: 200px;
+            width: 500px;
+            height: 300px;
             background-color:#5762ef;
             color:#ffffff;
             justify-content: center;
             align-items: center;
             border-radius: 12px;
             box-shadow: 10px 10px #8223ff; 
-            font-size: 20px;
+            font-size: 30px;
             img {
-                width: 100px;
-                height: 100px;
+                width: 180px;
+                height: 180px;
             }
         }
         .flute-class-btn{
             display:flex;
             flex-direction: column;
             box-sizing: content-box; 
-            width: 400px;
-            height: 200px;
+            width: 500px;
+            height: 300px;
             background-color:#5762ef;
             color:#ffffff;
             justify-content: center;
             align-items: center;
             border-radius: 12px;
             box-shadow: 10px 10px #8223ff; 
-            font-size: 20px;
+            font-size: 30px;
             img {
-                width: 100px;
-                height: 100px;
+                width: 180px;
+                height: 180px;
             }
         }
 
         }
         .contact-form-block{
             background-color:#eeeeee; 
-            height: 200px;
+            height: 400px;
+            width: 100%;
             padding: 50px;
+            margin-left: 0px;
+            margin-top: 1%;
             align-items: center;
+
         }
+      
+            .name-email{
+                display:flex;
+                flex-direction: row; 
+                justify-content: space-between;
+                .nombre{
+                    display:flex;
+                    flex-direction: column; 
+                }
+            } 
+        .rol{
+
+        }
+
+  
     }
     footer{
         background-color:#000000; 
         color:#ffffff;
         display:flex;
         flex-direction: row;
-        height: 50px;
+        height: 100px;
         padding-top: 10px;
 
 
     }
-}
