--- a/style_inicio.css
+++ b/style_inicio.css
@@ -24,7 +24,7 @@ body {
             padding-bottom: 5px; 
             margin-bottom: 15px;
         }
-        menu{
+        .menu{
             font-weight: 800;
             font-size: 70%;
             margin-left: 200px;
@@ -37,9 +37,7 @@ body {
         .header{
         background-color:#ffffff; 
         height: 350px;
-        display:flex;
-        flex-direction:row;
-        margin-bottom: 50px;
+        margin-bottom: 30px;
 
         .banner{
             img {
@@ -61,17 +59,17 @@ body {
                 color:#ffffff;
                 background-color:#FD625D;
                 border-color: #652cb3;
-                border-radius: 12px;
+                border-radius: 17px;
                 padding:10px;
                 font-size: 80%;
                 margin-bottom: 10%;
                 margin-top: 2%;
     
             }
-        }
+        
         .h2 {
             margin-left: 30px;
-            marging-top: 20%;
+            margin-top: 70px;
             margin-bottom: 1%;
             font-size: 200%;
         }
@@ -81,7 +79,6 @@ body {
             flex-direction:row;
             margin-left: 40px;
             margin-right: 40px;
-            margin-bottom: 1%;
             padding-bottom: 5%;  
             padding-top: 1%;
             gap:30px;
@@ -97,7 +94,7 @@ body {
             color:#ffffff;
             justify-content: center;
             align-items: center;
-            border-radius: 12px;
+            border-radius: 17px;
             box-shadow: 10px 10px #8223ff; 
             font-size: 30px;
             img {
@@ -116,7 +113,7 @@ body {
             color:#ffffff;
             justify-content: center;
             align-items: center;
-            border-radius: 12px;
+            border-radius: 17px;
             box-shadow: 10px 10px #8223ff; 
             font-size: 30px;
             img {
@@ -134,7 +131,7 @@ body {
             color:#ffffff;
             justify-content: center;
             align-items: center;
-            border-radius: 12px;
+            border-radius: 17px;
             box-shadow: 10px 10px #8223ff; 
             font-size: 30px;
             img {
@@ -142,34 +139,90 @@ body {
                 height: 180px;
             }
         }
-
+        
+        
+    }
+    .contact-form-block{
+    background-color:#eeeeee;
+    width: 100%;
+   
+    .rectangulo{
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        flex-direction: column;
+    }
+ 
+    .contact-form{
+        margin: 2px;
+        width:400px;
+        height:150px;
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-row: 200px 200px;
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+        
+        
+        .box{
+          padding:2px;
+          border-radius:10px;
+          color:#000000;
+          display:flex;
+          font-size:15px;
+          font-family:sans-serif;
+          display: flex;
+          flex-direction: column;
         }
-        .contact-form-block{
-            background-color:#eeeeee; 
-            height: 400px;
-            width: 100%;
-            padding: 50px;
-            margin-left: 0px;
-            margin-top: 1%;
-            align-items: center;
-
+        .birth-year{
+            width:205px;
+            height:40px;
         }
-      
-            .name-email{
-                display:flex;
-                flex-direction: row; 
-                justify-content: space-between;
-                .nombre{
-                    display:flex;
-                    flex-direction: column; 
-                }
-            } 
         .rol{
-
+            width:200px;
+            height:40px;  
         }
+        input {
+            width:200px;
+            height:40px;
+        }
+   
+    }
+    .send{
+        width:200px;
+        height:50px;
+        font-weight: 800;
+        font-size: 70%;
+        color:#ffffff;
+        background-color: #FD625D;
+        border-radius:10px;
+        border-color: #652cb3;
+
+        }  
+    }
+}
+      
+      
+
+}
+
+    .cursos-online{
+        display:flex;
+        flex-direction: column; 
+        margin-top: 70px;
+        .videos-cursos{
+         display:flex;
+        flex-direction: row; 
+        justify-content: space-between;
+        gap:20px;
+        margin-bottom: 100px;
+        margin-top: 20px;
+        }  
+    }
 
   
     }
+
     footer{
         background-color:#000000; 
         color:#ffffff;
@@ -177,6 +230,7 @@ body {
         flex-direction: row;
         height: 100px;
         padding-top: 10px;
+        margin-top: 30px;
 
 
     }
