--- a/style_inicio.css
+++ b/style_inicio.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body {
@@ -12,12 +12,14 @@ body {
         flex-direction:row;
         padding: 15px;
         font-weight:bolder;
-        font-size: 30px;
+        font-size: 25px;
         background-color:#fac710; 
         color: #000000;
         height: 50px;
         padding-top: 7px;
         .logo {
+            display:flex;
+        flex-direction:column;
             width: 75px;
             height: 70px;
             padding-top: -4px;
@@ -25,9 +27,12 @@ body {
             margin-bottom: 15px;
         }
         .menu{
+            display:flex;
+        flex-direction:column;
             font-weight: 800;
-            font-size: 70%;
-            margin-left: 200px;
+            font-size: 60%;
+            align-items: right;
+            justify-content: right;
             row-gap: 20px;
             padding-top: 10px;
             color:#000000;
@@ -41,20 +46,20 @@ body {
 
         .banner{
             img {
-                width: 800px;
-                height: 400px;
+                width: 750px;
+                height: 380px;
             }
             margin-left: 50%;
-            -bottom: 10%;
+            margin-bottom: 10%;
             position: absolute;
         }
         .texto-banner{
             margin-left: 30px;
             margin-right: 50%;
             padding-top: 30px;
-            font-size: 250%;
-        }
-        }
+            font-size: 200%;
+        
+        
             .cta-header {
                 color:#ffffff;
                 background-color:#FD625D;
@@ -63,16 +68,15 @@ body {
                 padding:10px;
                 font-size: 80%;
                 margin-bottom: 10%;
-                margin-top: 2%;
-    
+                margin-top: 7%;    
             }
-        
-        .h2 {
-            margin-left: 30px;
-            margin-top: 70px;
-            margin-bottom: 1%;
-            font-size: 200%;
         }
+        }
+        
+        .elige-instrumento {
+                font-size: 200%;
+                margin-left: 30px;
+            }
 
         .choose-instrument-block{
             display:flex;
@@ -139,57 +143,70 @@ body {
                 height: 180px;
             }
         }
-        
-        
     }
     .contact-form-block{
     background-color:#eeeeee;
     width: 100%;
+    height: 380px;
+    font-size: 200%;
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-bottom: 10px;
+    
+    }
    
     .rectangulo{
         display:flex;
         align-items:center;
         justify-content:center;
         flex-direction: column;
-    }
+   
  
     .contact-form{
         margin: 2px;
+        padding-top: 15px;
         width:400px;
         height:150px;
         display:grid;
         grid-template-columns: 1fr 1fr;
         grid-row: 200px 200px;
         grid-column-gap: 20px;
-        grid-row-gap: 20px;
-        
+        grid-row-gap: 20px;    
         
         .box{
           padding:2px;
           border-radius:10px;
           color:#000000;
           display:flex;
-          font-size:15px;
+          font-size:25px;
           font-family:sans-serif;
           display: flex;
           flex-direction: column;
+          font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
         }
         .birth-year{
-            width:205px;
+            width:250px;
             height:40px;
+            font-size: 20px;
         }
         .rol{
-            width:200px;
-            height:40px;  
+            width:250px;
+            height:40px; 
+            font-size: 20px;
+ 
         }
         input {
-            width:200px;
+            width:250px;
             height:40px;
+            font-size: 20px;
+
         }
    
     }
     .send{
         width:200px;
+        margin-top: 40px;
         height:50px;
         font-weight: 800;
         font-size: 70%;
@@ -201,15 +218,15 @@ body {
         }  
     }
 }
-      
-      
-
 }
+      
 
     .cursos-online{
+        font-size: 200%;
         display:flex;
         flex-direction: column; 
         margin-top: 70px;
+        padding-left: 30px;
         .videos-cursos{
          display:flex;
         flex-direction: row; 
@@ -217,14 +234,13 @@ body {
         gap:20px;
         margin-bottom: 100px;
         margin-top: 20px;
+        margin-right:30px ;
+
         }  
     }
-
-  
-    }
-
     footer{
         background-color:#000000; 
+        height: 30px;
         color:#ffffff;
         display:flex;
         flex-direction: row;
