--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body {
     button {
         border: none;
@@ -112,6 +113,8 @@ body {
         .white-note {
             height: 8em;
             width: 2em;
+            align-content: end;
+
         }
         
         .border-bottom {
@@ -132,6 +135,7 @@ body {
             
             background: black;
             border-bottom-color: rgb(99, 99, 99);
+            align-content: end;
         }
 
         .do-key {
@@ -169,4 +173,13 @@ body {
             border-bottom-color: #2e357e;
         }
     }
+}
+.keyboard-key{
+display: flex;
+justify-content: space-evenly;
+color:rgb(255, 255, 255);
+-webkit-text-stroke-color: black;
+-webkit-text-stroke-width: 0.6px;
+font-family:Arial, Helvetica, sans-serif;
+font-size: 15px;
 }
