--- a/style_inicio.css
+++ b/style_inicio.css
@@ -101,7 +101,8 @@ body {
             padding-top: 1%;
             gap:30px;
             justify-content: space-between;
-        .piano-class-btn{
+           
+           #piano-class-btn{
             display:flex;
             flex-direction: column;
             justify-items: left;
@@ -115,12 +116,14 @@ body {
             border-radius: 17px;
             box-shadow: 10px 10px #8223ff; 
             font-size: 30px;
+            transition: all 0.3s ease;
             img {
                 width: 180px;
                 height: 180px;
             }
-
         }
+
+    
         .guitar-class-btn{
             display:flex;
             flex-direction: column;
