--- a/style_inicio.css
+++ b/style_inicio.css
@@ -117,9 +117,16 @@ body {
             box-shadow: 10px 10px #8223ff; 
             font-size: 30px;
             transition: all 0.3s ease;
+            text-decoration: none; 
+            a {
+                text-decoration: none; 
+                color:#ffffff;
+                size: 30px;
+            }
             img {
                 width: 180px;
                 height: 180px;
+                margin-left: 20%;
             }
         }
 
