--- a/css/style_piano.css
+++ b/css/style_piano.css
@@ -1,5 +1,56 @@
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 body {
+    header {
+        display: flex; 
+        justify-content: space-between; 
+        align-items: center; 
+        padding: 5px;
+        background-color: #fac710;
+        color: #000000;
+        height: 80px; 
+        overflow: visible; 
+    }
+    
+    .logo-container {
+        display: flex; 
+        align-items: center; 
+    }
+    
+    .logo {
+        width: 120px; 
+        position: relative; 
+        top: 10px; 
+        padding-top: 20px;
+    }
+    
+    .Nombre-web {
+        margin-left: 10px; 
+        font-size: 250%;
+        font-family: 'Trebuchet MS', sans-serif;
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: black;
+        font-weight: 800;
+
+    }
+    
+    .menu {
+        display: flex; 
+    }
+    
+    .menu a {
+        margin-left: 20px; 
+        color: #000000; 
+        text-decoration: none; 
+        font-size: 30px;
+    }
+     
     .breadcrumb {
         display: flex;
         list-style: none;
@@ -11,67 +62,53 @@ body {
         padding: 0 5px;
         text-decoration: none; 
         color:black;
-    }
-    button {
-        border: none;
-    }
-
-    .darkblue-bg {
-        background-color: #5762EF;
+        button {
+            border: none;
+        }
+    
+        .darkblue-bg {
+            background-color: #5762EF;
+        }
+        
+        .purple-bg {
+            background: #652CB3;
+        }
+        
+        .magenta-bg {
+            background: #F72754;
+        }
+        
+        .font-graduate {
+            font-family: 'Graduate', sans-serif;
+            font-weight: bold;
+            color: white;
+        }
+    
+        .rounded-border {
+            border-radius: 10px;
+        }
     }
     
-    .purple-bg {
-        background: #652CB3;
+    main {
+        display: flex;
+        flex-direction: column;
+
     }
     
-    .magenta-bg {
-        background: #F72754;
+    .title-piano {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    
+        width: 6em;
+        height: 2.5em;
+    
+        h2 {
+            margin: 0;
+        }
     }
     
-    .font-graduate {
-        font-family: 'Graduate', sans-serif;
-        font-weight: bold;
-        color: white;
-    }
-
-    .rounded-border {
-        border-radius: 10px;
-    }
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-
-    gap: 10em;
-    margin: 2em 3em;
-}
-
-.title-piano {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: clamp(100px, 8vw, 8vw);
-    height: clamp(50px, 5vh, 5vh);
-
-    font-size: calc(1.75vh * 1.75vw);
-
-    h2 {
-        margin: 0;
-    }
-}
-
-.piano {
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-    width: clamp(370px, 95%, 95%);
-
     .piano-btns {
-        width: clamp(320px, 95%, 95%);
-
         display: flex;
         flex-direction: row;
     
@@ -84,148 +121,166 @@ main {
             display: flex;
             flex-direction: row;
     
+            justify-items: center;
             align-items: center;
     
             padding: 5px;
-            margin-bottom: -0.4vh;
+            margin-bottom: -0.4em;
         }
     
         .key-help {
-            justify-content: space-around;
-    
-            height: clamp(50px, 5vh, 5vh);
-            width: clamp(100px, 5vw, 5vw);
-    
             gap: 5px;
             background: #1FE7FF;
     
-            p {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-    
-                height: clamp(40px, 4vh, 4vh);
-                width: clamp(40px, 2vh, 2vh);
-    
+            button {
                 border-radius: 50%;
-                font-size: calc(1.75vh * 1.75vw);
-    
-                background: white;
             }
         }
     
         .inst-play {
-            gap: clamp(5px, 1vw, 1vw);
+            gap: 15px;
     
             div {
-                display: flex;
-                justify-content: center;
-                align-items: center;
+                height: 1.75em;
+                width: 10em;
     
-                height: clamp(50px, 5vh, 5vh);
-                width: clamp(175px, 10vw, 10vw);
-                font-size: calc(1.75vh * 1.75vw);
+                button {
+                    width: 100%;
+                    height: 100%;
     
-                p {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-    
-                    width: 90%;
-                    height: 90%;
+                    p {
+                        margin: 0;
+                    }
                 }
             }
         }
     
         .char-box {
-            height: clamp(50px, 15vh, 15vh);
-            width: clamp(100px, 15vw, 15vw);
-    
-            font-size: calc(1.75vh * 1.75vw);
+            font-size: 0.5em;
         }
     }
-    
-    .piano-notes {
-        display: flex;
-        justify-content: row;
-        
-        gap: 5px;
-        padding: 15px;
-    
-        border-radius: 25px;
-        background: #1FFFC6;
-    
-        width: max-content;
-    
-        section {
+        .piano-notes {
             display: flex;
-            flex-direction: row;
-    
-            gap: 0.5vw;
+            justify-content: row;
             
-            .border-bottom {
-                box-sizing: border-box;
-                border-bottom: 2vh solid;
-            }
-
-            .white-note {
-                height: 30vh;
-                width: 3.5vw;
-            }
-    
-            .black-note {
-                margin: 0 -1.75vw;
-                z-index: 1;
+            gap: 5px;
+            padding: 15px;
+        
+            border-radius: 25px;
+            background: #1FFFC6;
+        
+            width: max-content;
+        
+            section {
+                display: flex;
+                flex-direction: row;
+        
+                gap: 0.5em;
+        
+                .white-note {
+                    height: 8em;
+                    width: 2em;
+                    align-content: end;
+        
+                }
                 
-                height: 20vh;
-                width: 3vw;
+                .border-bottom {
+                    box-sizing: border-box;
+                    border-bottom: 0.25em solid;
+                }
+        
+                .no-border {
+                    border-bottom-width: 0;
+                }
+        
+                .black-note {
+                    margin: 0 -0.75em;
+                    z-index: 1;
+                    
+                    height: 6em;
+                    width: 1em;
+                    
+                    background: black;
+                    border-bottom-color: rgb(99, 99, 99);
+                    align-content: end;
+                }
+        
+                .do-key {
+                    background: #DA0063;
+                    border-bottom-color: #a7004b;
+                }
                 
-                background: black;
-                border-bottom-color: rgb(99, 99, 99);
-            }
+                .re-key {
+                    background: #F24726;
+                    border-bottom-color: #bd381d;
+                }
             
-            .no-border {
-                border-bottom-width: 0;
-            }
-    
-            .do-key {
-                background: #DA0063;
-                border-bottom-color: #a7004b;
-            }
+                .mi-key {
+                    background: #CEE741;
+                    border-bottom-color: #95a72f;
+                }
             
-            .re-key {
-                background: #F24726;
-                border-bottom-color: #bd381d;
-            }
-        
-            .mi-key {
-                background: #CEE741;
-                border-bottom-color: #95a72f;
-            }
-        
-            .fa-key {
-                background: #8FD14F;
-                border-bottom-color: #649236;
-            }
-        
-            .sol-key {
-                background: #12CDD4;
-                border-bottom-color: #0a858a;
-            }
-        
-            .la-key {
-                background: #2D9BF0;
-                border-bottom-color: #1e659c;
-            }
-        
-            .si-key {
-                background: #414BB2;
-                border-bottom-color: #2e357e;
+                .fa-key {
+                    background: #8FD14F;
+                    border-bottom-color: #649236;
+                }
+            
+                .sol-key {
+                    background: #12CDD4;
+                    border-bottom-color: #0a858a;
+                }
+            
+                .la-key {
+                    background: #2D9BF0;
+                    border-bottom-color: #1e659c;
+                }
+            
+                .si-key {
+                    background: #414BB2;
+                    border-bottom-color: #2e357e;
+                }
             }
         }
-    }
+        .keyboard-key{
+        display: flex;
+        justify-content: space-evenly;
+        color:rgb(255, 255, 255);
+        -webkit-text-stroke-color: black;
+        -webkit-text-stroke-width: 0.6px;
+        font-family:Arial, Helvetica, sans-serif;
+        font-size: 12px;
+        
+        }
+
+        footer {
+            background-color: #000000;
+            color: #ffffff;
+            padding: 10px 20px;
+            margin-top: 30px;
+            height: auto; 
+            overflow: hidden; 
+        }
+        
+        .footer-column-left {
+            float: left; 
+            width: 50%; 
+        }
+        
+        .footer-column-right {
+            float: right; 
+            width: 50%; 
+            text-align: right; 
+        }
+        
+        .footer-column-left a {
+            color: #ffffff;
+            text-decoration: none;
+            display: block; 
+            margin-bottom: 10px;
+        }
+        
+        .footer-column-left a:hover {
+            text-decoration: underline;
+        }
 }
 
-@media (max-width: 370px) {
-
-}
