--- a/css/style_piano.css
+++ b/css/style_piano.css
@@ -62,6 +62,26 @@ body {
         padding: 0 5px;
         text-decoration: none; 
         color:black;
+ 
+    }
+    
+    main {
+        display: flex;
+        flex-direction: column;
+
+    }
+    
+    .title-piano {
+        align-items: start;
+        text-align: center;
+        width: 6em;
+        height: 2em;
+    }
+    }
+    .font-graduate {
+        font-family: 'Graduate', sans-serif;
+        font-weight: bold;
+        color: rgb(0, 0, 0);
         button {
             border: none;
         }
@@ -78,37 +98,14 @@ body {
             background: #F72754;
         }
         
-        .font-graduate {
-            font-family: 'Graduate', sans-serif;
-            font-weight: bold;
-            color: white;
-        }
-    
         .rounded-border {
             border-radius: 10px;
         }
-    }
-    
-    main {
-        display: flex;
-        flex-direction: column;
 
     }
     
-    .title-piano {
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    
-        width: 6em;
-        height: 2.5em;
-    
-        h2 {
-            margin: 0;
-        }
-    }
-    
     .piano-btns {
+        width: clamp(320px, 95%, 95%);
         display: flex;
         flex-direction: row;
     
@@ -122,7 +119,6 @@ body {
             flex-direction: row;
     
             justify-items: center;
-            align-items: center;
     
             padding: 5px;
             margin-bottom: -0.4em;
