--- a/css/style_piano.css
+++ b/css/style_piano.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -30,6 +29,11 @@ body {
         padding-top: 20px;
     }
     
+    .info {
+        width: 50px;
+        height: 50px;
+    }
+
     .Nombre-web {
         margin-left: 10px; 
         font-size: 250%;
@@ -56,36 +60,21 @@ body {
         list-style: none;
         text-decoration: none; 
         color:black;
-        }
+        
         .breadcrumb-item + .breadcrumb-item::before {
-        content: '>';
-        padding: 0 5px;
-        text-decoration: none; 
-        color:black;
- 
+            content: '>';
+            padding: 0 5px;
+            text-decoration: none; 
+            color:black;
+        }
     }
     
     main {
         display: flex;
         flex-direction: column;
 
-    }
-    
-    .title-piano {
-        align-items: start;
-        text-align: center;
-        width: 6em;
-        height: 2em;
-    }
-    }
-    .font-graduate {
-        font-family: 'Graduate', sans-serif;
-        font-weight: bold;
-        color: rgb(0, 0, 0);
-        button {
-            border: none;
-        }
-    
+        margin: 2em 3em;
+
         .darkblue-bg {
             background-color: #5762EF;
         }
@@ -98,63 +87,122 @@ body {
             background: #F72754;
         }
         
+        .font-graduate {
+            font-family: 'Graduate', sans-serif;
+            font-weight: bold;
+            color: white;
+        }
+    
         .rounded-border {
             border-radius: 10px;
         }
-
     }
     
-    .piano-btns {
-        width: clamp(320px, 95%, 95%);
+    .title-piano {
         display: flex;
-        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        width: clamp(100px, 8vw, 8vw);
+        height: clamp(50px, 5vh, 5vh);
+
+        font-size: calc(1.75vh * 1.75vw);
+
+        h2 {
+            margin: 0;
+        }
+    }
     
-        justify-content: space-around;
-        align-items: end;
+    .piano {
+        display: flex;
+        flex-direction: column;
     
-        z-index: 1;
-        
-        div {
+        align-items: center;
+        width: clamp(80%, 95%, 95%);
+    
+        margin-top: -5vh;
+    
+        .piano-btns {
+            width: clamp(320px, 95%, 95%);
+    
             display: flex;
             flex-direction: row;
-    
-            justify-items: center;
-    
-            padding: 5px;
-            margin-bottom: -0.4em;
-        }
-    
-        .key-help {
-            gap: 5px;
-            background: #1FE7FF;
-    
-            button {
-                border-radius: 50%;
-            }
-        }
-    
-        .inst-play {
-            gap: 15px;
-    
+        
+            justify-content: space-around;
+            align-items: end;
+        
+            z-index: 1;
+            
             div {
-                height: 1.75em;
-                width: 10em;
-    
-                button {
-                    width: 100%;
-                    height: 100%;
-    
+                display: flex;
+                flex-direction: row;
+        
+                align-items: center;
+        
+                padding: 5px;
+                margin-bottom: -0.4vh;
+            }
+        
+            .key-help {
+                justify-content: space-around;
+        
+                height: clamp(50px, 5vh, 5vh);
+                width: clamp(100px, 5vw, 5vw);
+        
+                gap: 5px;
+                background: #1FE7FF;
+        
+                p {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+        
+                    height: clamp(40px, 4vh, 4vh);
+                    width: clamp(40px, 2vh, 2vh);
+        
+                    border-radius: 50%;
+                    font-size: calc(1.75vh * 1.75vw);
+        
+                    background: white;
+                }
+            }
+        
+            .inst-play {
+                gap: clamp(5px, 1vw, 1vw);
+        
+                div {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+        
+                    height: clamp(50px, 5vh, 5vh);
+                    width: clamp(175px, 10vw, 10vw);
+                    font-size: calc(1.75vh * 1.75vw);
+        
                     p {
-                        margin: 0;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+        
+                        width: 90%;
+                        height: 90%;
                     }
                 }
             }
+        
+            .char-box {
+                height: clamp(50px, 15vh, 15vh);
+                width: max-content;
+                
+                .char-text {
+                    width: clamp(100px, 15vw, 15vw);
+                    height: 80%;
+                    
+                    font-size: calc(0.8vh * 0.8vw);
+                }
+            }
         }
-    
-        .char-box {
-            font-size: 0.5em;
-        }
-    }
+        
         .piano-notes {
             display: flex;
             justify-content: row;
@@ -171,34 +219,35 @@ body {
                 display: flex;
                 flex-direction: row;
         
-                gap: 0.5em;
-        
-                .white-note {
-                    height: 8em;
-                    width: 2em;
-                    align-content: end;
-        
-                }
+                gap: 0.5vw;
                 
                 .border-bottom {
                     box-sizing: border-box;
-                    border-bottom: 0.25em solid;
+                    border-bottom: 2vh solid;
                 }
-        
-                .no-border {
-                    border-bottom-width: 0;
+    
+                .white-note {
+                    height: clamp(100px, 30vh, 30vh);
+                    width: clamp(30px, 3.5vw, 3.5vw);
+
+                    align-content: end;
                 }
         
                 .black-note {
-                    margin: 0 -0.75em;
+                    margin: 0 -1.75vw;
                     z-index: 1;
                     
-                    height: 6em;
-                    width: 1em;
+                    height: clamp(50px, 20vh, 20vh);
+                    width: clamp(25px, 3vw, 3vw);
                     
                     background: black;
                     border-bottom-color: rgb(99, 99, 99);
+
                     align-content: end;
+                }
+                
+                .no-border {
+                    border-bottom-width: 0;
                 }
         
                 .do-key {
@@ -236,27 +285,29 @@ body {
                     border-bottom-color: #2e357e;
                 }
             }
-        }
-        .keyboard-key{
-        display: flex;
-        justify-content: space-evenly;
-        color:rgb(255, 255, 255);
-        -webkit-text-stroke-color: black;
-        -webkit-text-stroke-width: 0.6px;
-        font-family:Arial, Helvetica, sans-serif;
-        font-size: 12px;
-        
+
         }
 
-        footer {
-            background-color: #000000;
-            color: #ffffff;
-            padding: 10px 20px;
-            margin-top: 30px;
-            height: auto; 
-            overflow: hidden; 
+        .keyboard-key {
+            display: flex;
+            justify-content: space-evenly;
+            color:rgb(255, 255, 255);
+            -webkit-text-stroke-color: black;
+            -webkit-text-stroke-width: 0.6px;
+            font-family:Arial, Helvetica, sans-serif;
+            font-size: 17px;
+            text-transform: uppercase;
         }
-        
+    }
+
+    footer {
+        background-color: #000000;
+        color: #ffffff;
+        padding: 10px 20px;
+        margin-top: 30px;
+        height: auto; 
+        overflow: hidden;
+
         .footer-column-left {
             float: left; 
             width: 50%; 
@@ -278,5 +329,23 @@ body {
         .footer-column-left a:hover {
             text-decoration: underline;
         }
+    }
 }
 
+@media (pointer: coarse) {
+    .inferior {
+        display: none !important;
+    }
+
+    .superior {
+        display: none !important;
+    }
+
+    .keyboard {
+        display: none !important;
+    }
+
+    .black-note { 
+        margin: 0 -3vw !important;
+    }
+}
